# lojbot

./: LICENSE  Lojbot.hs  README  fatci.txt  jbovlaste.db  lojbot.cabal  sample-config.ini
src/: Main.hi  Main.hs  Paths_lojbot.hs  WildCard.hi  WildCard.hs
